--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "file-loader": "^6.2.0",
     "webpack": "^4.44.0",
     "webpack-cli": "3.3.12"
   },
@@ -19,6 +20,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "angular": "^1.6.3",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.5.3",
